[package]
name = "sns-wasm"
version = "0.1.1"
edition = "2024"
description = "Client-side SDK for interacting with Solana Name Service Program."
license = "Apache-2.0"
repository = "https://github.com/emhane/sns-wasm"
readme = "README.md"
keywords = ["solana", "sns", "name-service-program"]
categories = ["api-bindings", "cryptography::cryptocurrencies", "wasm", "web-programming"]

[lints]
rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rust.unreachable_pub = "warn"
rust.unused_must_use = "deny"
rustdoc.all = "warn"
# rust.unnameable-types = "warn"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
# solana
solana-rent = "4.1"
solana-instruction = { version = "3.2", features = ["serde"] }
solana-program-error = { version = "3.0", features = ["serde"] }
solana-hash = { version ="4.2", features = ["copy", "serde"] }
solana-address = { version = "2.2", default-features = true, features = ["curve25519", "wincode", "serde", "decode"] }

# wasm
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"

# encoding
serde = { version = "1.0", features = ["derive"] }
wincode = { version = "0.4", features = ["derive"] }

# misc
derive_more = { version = "2.1", default-features = false, features = [
    "constructor",
    "deref",
    "into",
]}
sha2 = "0.10"

[dev-dependencies]
wasm-bindgen-test = "0.3"
solana-address = { version = "2.2", features = ["curve25519", "wincode", "serde", "decode", "atomic"] }

[profile.release]
opt-level = 'z' # optimize for size
lto = 'fat'
codegen-units = 1
panic = "abort"